--- a/getx_practice/pubspec.yaml
+++ b/getx_practice/pubspec.yaml
@@ -64,7 +64,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images.jpeg
+    - assets/images.jpg
     - assets/istockphoto-1488375208-612x612.jpg
 
 
