--- a/getx_practice/pubspec.yaml
+++ b/getx_practice/pubspec.yaml
@@ -45,13 +45,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -68,6 +69,7 @@ flutter:
   assets:
     - assets/images.jpg
     - assets/istockphoto-1488375208-612x612.jpg
+    - assets/swagy cat.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
