--- a/getx_practice/pubspec.yaml
+++ b/getx_practice/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
     - assets/images.jpg
     - assets/istockphoto-1488375208-612x612.jpg
     - assets/taha.jpg
+    - assets/swagy cat.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
