--- a/getx_practice/pubspec.yaml
+++ b/getx_practice/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_fonts: ^6.2.1
   dio: ^5.8.0+1
   shared_preferences: ^2.5.3
+  qr_flutter: ^4.1.0
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
