--- a/getx_practice/pubspec.yaml
+++ b/getx_practice/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   google_fonts: ^6.2.1
   dio: ^5.8.0+1
   shared_preferences: ^2.5.3
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
