--- a/getx_practice/pubspec.yaml
+++ b/getx_practice/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
   url_launcher: ^6.3.1
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
