--- a/getx_practice/pubspec.yaml
+++ b/getx_practice/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   latlong2: ^0.9.0
   url_launcher: ^6.3.1
   flutter_rating_bar: ^4.0.1
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
